--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,9 @@
     list-style-type: none;
     text-decoration: none;
   }
-
+  a{
+    color: #1e1d4c;
+  }
   html {
     box-sizing: inherit;
     scroll-behavior: smooth;
@@ -215,15 +217,74 @@
 
   .menu-block-btn {
     border: 2px solid #212832;
-    padding: 8px 16px;
-    border-radius: 5px;
+    border-radius: 5px; 
+  }
+  .menu-block-btn a{
+    display: block;
+    height: 100%;
+    width: 100%;
   }
 
   .menu-block-btn:hover {
     background-color: #212832;
     color: #fff;
   }
+  .menu-block-btn a:hover {
+    background-color: #212832;
+    color: #fff;
+  }
 
+  .burger {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+  order: -1;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  background: none;
+  visibility: visible;
+  transform: rotate(0deg);
+  transition: 0.35s ease;
+  margin-right: 24px;
+  background-color: #fff;
+}
+
+.burger-line-wrapper {
+  height: 20px;
+  width: 20px;
+  position: relative;
+}
+
+.burger-line {
+  position: absolute;
+  display: block;
+  left: 0px;
+  width: 20px;
+  height: 2px;
+  border: none;
+  outline: none;
+  opacity: 1;
+  border-radius: 20px;
+  transform: rotate(0deg);
+  transition: 0.25s ease-in-out;
+  background-color: #212832;
+}
+
+.burger-line:nth-child(1) {
+  top: 0px;
+}
+
+.burger-line:nth-child(2) {
+  top: 0.5rem;
+  width: 70%;
+}
+
+.burger-line:nth-child(3) {
+  top: 1rem;
+}
   /*  */
 
   .close-menu {
@@ -248,7 +309,7 @@
     opacity: 0.5;
   }
 
-  /* 
+  
   .burger.is-active .burger-line:nth-child(1) {
     top: 0.5rem;
     transform: rotate(135deg);
@@ -262,7 +323,7 @@
   .burger.is-active .burger-line:nth-child(3) {
     top: 0.5rem;
     transform: rotate(-135deg);
-  } */
+  }
 
   /* Header Navigation End   */
 
